GKE/clusterIPExample/ingress/ingress.yaml
# ingress-multiple-subdomains.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiple-subdomain-ingress
spec:
  rules:
  - host: app1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
  - host: app2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
